Adding different color options

--- a/spreadsheet-viewer.html
+++ b/spreadsheet-viewer.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <button id="darkModeToggle" class="dark-mode-toggle" title="Toggle dark mode">🌙</button>
+    
     <div class="container">
         <h1>🏠 Selection Selector Appy App</h1>
 
